# TraceMind

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  render.yaml  verify_all.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: eval_gate.py
.github/workflows/: eval-gate.yml  test.yml
backend/: Dockerfile  main.py  render.yaml  requirements-dev.txt  requirements.txt  test_complete_backend.py
backend/alembic/: env.py
backend/alembic/versions/: 0517d68db39e_initial_schema.py  0550d96b7c22_widen_ab_test_runs_id_column_to_varchar_.py  3dd412a5fc4c_add_ab_test_runs_cost_records_webhook_.py  63c98fc7262b_add_prompt_versions_table.py  651529d2a92e_initial_schema.py  c5a53df4fc4e_add_ab_test_runs_table.py  d193dedd58f1_add_prompt_versions_table.py
backend/api/: ab_testing.py  admin.py  agent.py  alerts.py  datasets.py  eval_templates.py  evals.py  hallucination.py  metrics.py  projects.py  prompts.py  traces.py
backend/core/: auth.py  config.py  cost_tracker.py  data_pipeline.py  eval_agent.py  eval_engine.py  eval_metrics.py  hallucination_detector.py  limiter.py  llm.py  logging_middleware.py  multi_sample_judge.py  prompt_ab.py  prompt_versioning.py  regression_detector.py  webhook_delivery.py
backend/db/: database.py  models.py
backend/tests/: complete_backend_check.py  conftest.py  test_api.py  test_eval_agent_function_calling.py  test_eval_engine.py  test_hallucination.py  test_sdk.py  test_tenant_isolation.py
backend/worker/: eval_worker.py  retention.py
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  Skeleton.tsx  Toast.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Dashboard.tsx  Datasets.tsx  Evals.tsx  Hallucination.tsx  Live.tsx  Playground.tsx  Traces.tsx
sdk/python/: README.md  pyproject.toml
sdk/python/evalforge/: __init__.py  client.py
sdk/python/examples/: quickstart.py
sdk/python/tests/: test_auto.py  test_dev_alerts.py
sdk/python/tracemind/: __init__.py  auto.py  client.py  conversation.py  pii.py
sdk/python/tracemind/cli/: main.py
sdk/python/tracemind/integrations/: anthropic_integration.py  dspy.py  langchain_integration.py  llamaindex.py  openai_integration.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
