[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracemind-sdk"
version = "0.3.0"
description = "TraceMind Python SDK — production-grade LLM observability"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
openai    = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
langchain = ["langchain>=0.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracemind*"]