[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "tracemind-sdk"
version     = "0.3.0"
description = "Python SDK for TraceMind — LLM quality monitoring and observability"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Aayush Kumar", email = "aayush@tracemind.dev" }
]
keywords = [
  "llm", "observability", "evaluation", "monitoring",
  "ai", "agents", "tracing", "quality", "evals"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.24.0",
  "typing-extensions>=4.0; python_version<'3.11'",
  "python-dotenv>=1.0.0",
  "click>=8.0.0",
]

[project.optional-dependencies]
openai     = ["openai>=1.0.0"]
anthropic  = ["anthropic>=0.20.0"]
langchain  = ["langchain-core>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
dspy       = ["dspy-ai>=2.0.0"]
all = [
  "openai>=1.0.0",
  "anthropic>=0.20.0",
  "langchain-core>=0.1.0",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
]

[project.scripts]
tracemind = "tracemind.cli.main:main"

[project.urls]
Homepage      = "https://github.com/Aayush-engineer/tracemind"
Documentation = "https://github.com/Aayush-engineer/tracemind#readme"
Repository    = "https://github.com/Aayush-engineer/tracemind"
Issues        = "https://github.com/Aayush-engineer/tracemind/issues"
Changelog     = "https://github.com/Aayush-engineer/tracemind/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["tracemind*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
filterwarnings = [
  "ignore::RuntimeWarning:.*coroutine.*never awaited",
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length    = 100
target-version = "py311"